--- a/listings/templates/listings/base.html
+++ b/listings/templates/listings/base.html
@@ -1,7 +1,14 @@
 <nav class = "navbar">
     <a href="{% url 'listings:index' %}">BIKE FINDER</a> -
     <a href="{% url 'listings:all_listings' %}">LISTINGS</a> -
-    <a href="{% url 'listings:new_listing' %}">NEW LISTING</a>
+    {% if user.is_authenticated %}
+    {{ user.username }} -
+     <a href="{% url 'listings:my_listings' %}">MY LISTINGS</a> - 
+    <a href="{% url 'users:log_out' %}">LOG OUT</a>
+    {% else %}
+    <a href="{% url 'users:login' %}">LOGIN</a> -
+    
+    {% endif %}
 </nav>
 
 {%block content%}
