--- a/listings/templates/listings/all_listings.html
+++ b/listings/templates/listings/all_listings.html
@@ -1,48 +1,47 @@
-{% extends "listings/base.html" %} {%block content%}
+{% extends "listings/base.html" %}
+{% load crispy_forms_tags %}
 
-<h1>LISTINGS</h1>
-<div class="form-group">
-    <div class="card">
-        <form method="get">
-            <p><b>Condition:</b> {{ my_Filter.form.condition }}</p>
-            <b>State:</b>{{ my_Filter.form.state }}</p>
-            <b>City:</b>{{ my_Filter.form.city }}</p>
-            <button class="btn" type="submit">Search</button>
-        </form>
+{%block content%} 
+
+<div class="container text-center p-3 " style="width:500px;">
+    <h1 class="text-dark">Listings</h1>
+    <div class="form-group">
+        <div class="card card-body bg-light text-dark rounded">
+            <form method="get">
+                <div class="row ">
+                    <div class="col-md-3">
+                        {{ my_Filter.form.condition|as_crispy_field }}
+                    </div>
+                    <div class="col-md-3">
+                        {{ my_Filter.form.state|as_crispy_field }}
+                    </div>
+                    <div class="col-md-3">
+                        {{ my_Filter.form.city|as_crispy_field }}
+                    </div>
+                    <div class="col-md-3 p-2">
+                        <button class="btn btn-warning border-dark mt-4" type="submit">Search</button>
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
-</div>
-
-<div class="row">
-  <div class="col">
-    <div class="card">
-      <table>
-        <tr>
-          <th></th>
-          <th></th>
-          <th>Product</th>
-          <th>Price</th>
-          <th>Email</th>
-          <th>Date Added</th>
-          <th></th>
-        </tr>
+</div> 
+                   
+<div class="container">
+    <div class="card card-body bg-light text-dark text-center p-3 ">
         {% for listing in all_listings %}
-        <tr>
-          <td><img src="{{ listing.main_photo.url }}" height=300px alt="connect" style="max-height:200px"></td>
-          <td><img src="{{ listing.photo_1.url }}" height=300px alt="connect" style="max-height:200px"></td>
-          <td>{{ listing.title }}</td>
-          <td>{{ listing.price|floatformat:2 }}</td>
-          <td>{{ listing.contact_email }}</td>
-        <td>{{ listing.list_date }}</td>
-          <td><a class="btn" href="{% url 'listings:detail' listing.id %}">View</a></td>
-        </tr>
-        {% empty %}
-        <h3>No listings found. Try again.</h3>
+            <img class="card-img-right img-thumbnail"  src="{{ listing.main_photo.url }}" width=300px height=200px style="max-height:200px" alt="connect">
+            <img class="card-img-right img-thumbnail" src="{{ listing.photo_1.url }}" width=300px height=200px style="max-height:200px" alt="connect">
+            <p><b>Title:</b> {{ listing.title }}</p>
+            <p><b>Condition:</b> {{ listing.condition }}</p>
+            <p><b>Sale Type:</b> {{ listing.sale_type }}</p>
+            <p><b>Price:</b> $ {{ listing.price|floatformat:2 }}</p>
+            <p><b>Location:</b> {{ listing.city }}, {{ listing.state }}</p>
+            <p><b>Post Date:</b> {{ listing.list_date }}</p>
+            <ul><a class="btn btn-warning border-dark" href="{% url 'listings:detail' listing.id %}">View Listing</a></ul>
+            <hr>
         {% endfor %}
-      </table>
-      <div class="container">
-				<a class="btn" href="{% url 'listings:new_listing'%}"> New Listing</a>
-			</div>
     </div>
-  </div>
 </div>
-{%endblock content%}
+            
+{%endblock content%} 
